--- a/05 - Entrega do Projeto Final/Projeto Web/homepage.html
+++ b/05 - Entrega do Projeto Final/Projeto Web/homepage.html
@@ -9,10 +9,8 @@
 <body>
     <header>
         <h1>Festival de Cinema de Gramado</h1>
-        <!-- Botão para abrir/fechar o menu lateral -->
         <button id="toggleMenu">Menu</button>
     </header>
-    <!-- Barra lateral com navegação -->
     <nav id="sidebar">
         <ul>
             <li><a href="homepage.html">Página Inicial</a></li>
@@ -24,7 +22,6 @@
             <li><a href="sobre_nos.html">Sobre Nós</a></li>
         </ul>
     </nav>
-    <!-- Seção principal do conteúdo -->
     <section>
         <div class="section-home">
             <h2>Bem-vindo ao Festival de Cinema de Gramado</h2>
@@ -32,13 +29,10 @@
             <p>O Festival de Cinema de Gramado é um dos principais eventos cinematográficos do país, proporcionando uma experiência única para cinéfilos e profissionais do setor.</p>
             <p>Descubra os filmes selecionados, participe das atividades paralelas e garanta seu lugar nas sessões de cinema!</p>
             <br>
-            <!-- Link para a página de programação -->
             <a href="programacao.html" class="btn">Veja a Programação</a>
         </div>
-        <!-- Carrossel de imagens -->
         <div class="carousel">
             <div class="carousel-inner">
-                <!-- Imagens do carrossel -->
                 <img src="fotos/foto1.jpeg" class="carousel-item active">
                 <img src="fotos/foto2.jpeg" class="carousel-item">
                 <img src="fotos/foto3.jpeg" class="carousel-item">
@@ -49,13 +43,10 @@
                 <img src="fotos/foto8.jpeg" class="carousel-item">
                 <img src="fotos/foto9.jpeg" class="carousel-item">
             </div>
-            <!-- Botões de controle do carrossel -->
             <button class="carousel-control prev">Anterior</button>
             <button class="carousel-control next">Próximo</button>
         </div>
-        <!-- Seção de vídeo -->
         <div class="video">
-            <!-- Vídeo incorporado do YouTube -->
             <iframe src="https://www.youtube.com/embed/_1z0xMzyCCk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="more-info">
@@ -64,7 +55,7 @@
     </section>
     <footer>
         <address class="final">
-            <!-- Informações de contato -->
+            <!-- classe para mexer na parte do footer -->
             Entre em contato conosco:
             <a href="festivaldegramadooficial2024S@gmail.com">Email de Contato</a>
             Telefone: +55 (54) 97458-0206
@@ -73,9 +64,7 @@
         </address>
         <p>&copy; 2024 Festival de Cinema de Gramado. Todos os direitos reservados.</p>
     </footer>
-    <!-- Inclusão da biblioteca jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Inclusão do arquivo de script -->
     <script src="homepage.js"></script>
 </body>
 </html>
